2020-03-19  Aakash Jain  <aakash_jain@apple.com>

        commit-queue status-bubble shows incorrect position in queue
        https://bugs.webkit.org/show_bug.cgi?id=209313

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-app/ews/views/statusbubble.py:
        (StatusBubble._queue_position):

2020-03-19  Takashi Komori  <Takashi.Komori@sony.com>

        [Curl] Add an API returns description of verification errors.
        https://bugs.webkit.org/show_bug.cgi?id=208913

        Reviewed by Fujii Hironori.

        WKCertificateInfoCopyVerificationErrorDescription returns the description of SSL verification error as human readable string.
        Browser can display more precise error information with this API.

        API Test: Curl.CertificateAPI

        * MiniBrowser/win/Common.cpp:
        (askServerTrustEvaluation):
        * MiniBrowser/win/Common.h:
        * MiniBrowser/win/WebKitBrowserWindow.cpp:
        (createPEMString):
        (WebKitBrowserWindow::canTrustServerCertificate):
        * TestWebKitAPI/Tests/WebKit/curl/Certificates.cpp:
        (TestWebKitAPI::Curl::TEST):

2020-03-19  Aakash Jain  <aakash_jain@apple.com>

        Update build.webkit.org link for EWS
        https://bugs.webkit.org/show_bug.cgi?id=209280

        Reviewed by Alexey Proskuryakov.

        * BuildSlaveSupport/build.webkit.org-config/templates/root.html:

2020-03-19  Stephan Szabo  <stephan.szabo@sony.com>

        [WinCairo] extract-built-product fails after r258612
        https://bugs.webkit.org/show_bug.cgi?id=209285

        extractBuiltProduct also references the old name for the
        requirements on wincairo.

        Reviewed by Ross Kirsling.

        * BuildSlaveSupport/built-product-archive:

2020-03-19  Philippe Normand  <pnormand@igalia.com>

        [Flatpak SDK] Release logs not sent to journald when running within the SDK runtime
        https://bugs.webkit.org/show_bug.cgi?id=209223
