@@ -1,3 +1,14 @@
+2020-03-19  Alex Christensen  <achristensen@webkit.org>
+
+        Remove test failing after r258734
+        https://bugs.webkit.org/show_bug.cgi?id=209303
+
+        We removed the functionality it was testing because it did nothing useful except call the callback.
+        I'm about to remove the only user of WKContextGetStatistics.
+
+        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+        * TestWebKitAPI/Tests/WebKit/WebCoreStatisticsWithNoWebProcess.cpp: Removed.
+
 2020-03-19  Aakash Jain  <aakash_jain@apple.com>
 
         commit-queue status-bubble shows incorrect position in queue
